Fix overflow in the header

--- a/src/app/ui/blocks/header/header.component.css
+++ b/src/app/ui/blocks/header/header.component.css
@@ -58,15 +58,16 @@
     position: fixed;
     transition: right 0.3s ease-in-out;
     top: 0;
-    right: -100%;
+    right: 0;
     height: 100dvh;
     background-color: #82bbad;
     box-shadow: 0px -2px 20px 1px rgba(0, 0, 0, 0.25);
     width: 80%;
+    display: none;
   }
 
   .header__navigation--visible {
-    right: 0;
+    display: flex;
   }
 
   .header__open {
